# Set all target’s visibility in this package to "public".
package(default_visibility = ["//visibility:public"])

# Load rules_haskell rules.
load(
    "@rules_haskell//haskell:defs.bzl",
    "haskell_binary",
    "haskell_library",
)
load(
    "@rules_haskell//haskell:cabal.bzl",
    "haskell_cabal_binary",
    "haskell_cabal_library",
)
load(
    "//:build/common.bzl",
    "STANDARD_GHC_WARNINGS",
)

# You can add your own libraries with haskell_library.
haskell_library(
    name = "semantic-analysis",
    srcs = glob(["src/**/*.hs"]),
    compiler_flags = STANDARD_GHC_WARNINGS + ["-XOverloadedStrings"],
    deps = [
        "//:base",
        "//:containers",
        "//:filepath",
        "//:haskeline",
        "//:text",
        "//:transformers",
        "//semantic-source",
        "@stackage//:aeson",
        "@stackage//:algebraic-graphs",
        "@stackage//:fused-effects",
        "@stackage//:fused-effects-readline",
        "@stackage//:fused-syntax",
        "@stackage//:hashable",
        "@stackage//:pathtype",
        "@stackage//:prettyprinter",
        "@stackage//:prettyprinter-ansi-terminal",
        "@stackage//:semilattices",
        "@stackage//:terminal-size",
    ],
)
