cabal-version:       2.4

name:                semantic-analysis
version:             0.0.0.0
synopsis:            Program analysis by abstract definitional interpretation.
description:         Program analysis abstractions and implementations by abstract definitional interpretation.
homepage:            https://github.com/github/semantic/tree/master/semantic-analysis#readme
bug-reports:         https://github.com/github/semantic/issues
license:             MIT
license-file:        LICENSE
author:              The Semantic authors
maintainer:          opensource+semantic@github.com
copyright:           (c) 2019 GitHub, Inc.
category:            Language
build-type:          Simple
stability:           alpha
extra-source-files:  README.md

tested-with:
  GHC == 8.6.5

common common
  default-language: Haskell2010
  ghc-options:
    -Weverything
    -Wno-missing-local-signatures
    -Wno-missing-import-lists
    -Wno-implicit-prelude
    -Wno-safe
    -Wno-unsafe
    -Wno-name-shadowing
    -Wno-monomorphism-restriction
    -Wno-missed-specialisations
    -Wno-all-missed-specialisations
    -Wno-star-is-type
  if (impl(ghc >= 8.8))
    ghc-options: -Wno-missing-deriving-strategies

library
  import: common
  hs-source-dirs: src
  -- exposed-modules:
  build-depends:
      base  >= 4.12 && < 5

test-suite doctest
  import: common
  type:           exitcode-stdio-1.0
  hs-source-dirs: test
  main-is:        Doctest.hs
  build-depends:
      base >=4.9 && <4.13
    , doctest >=0.7 && <1.0
    , QuickCheck
    , semantic-analysis
