cabal-version:       2.4

name:                semantic-analysis
version:             0.0.0.0
synopsis:            Program analysis by abstract definitional interpretation.
description:         Program analysis abstractions and implementations by abstract definitional interpretation.
homepage:            https://github.com/github/semantic/tree/master/semantic-analysis#readme
bug-reports:         https://github.com/github/semantic/issues
license:             MIT
license-file:        LICENSE
author:              The Semantic authors
maintainer:          opensource+semantic@github.com
copyright:           (c) 2019 GitHub, Inc.
category:            Language
build-type:          Simple
stability:           alpha
extra-source-files:  README.md

tested-with:
  GHC == 8.6.5

common common
  default-language: Haskell2010
  ghc-options:
    -Weverything
    -Wno-missing-local-signatures
    -Wno-missing-import-lists
    -Wno-implicit-prelude
    -Wno-safe
    -Wno-unsafe
    -Wno-name-shadowing
    -Wno-monomorphism-restriction
    -Wno-missed-specialisations
    -Wno-all-missed-specialisations
    -Wno-star-is-type
  if (impl(ghc >= 8.8))
    ghc-options: -Wno-missing-deriving-strategies

library
  import: common
  hs-source-dirs: src
  exposed-modules:
    Analysis.Blob
    Analysis.Carrier.Env.Monovariant
    Analysis.Carrier.Env.Precise
    Analysis.Carrier.Heap.Monovariant
    Analysis.Carrier.Heap.Precise
    Analysis.Concrete
    Analysis.Effect.Domain
    Analysis.Effect.Env
    Analysis.Effect.Heap
    Analysis.File
    Analysis.FlowInsensitive
    Analysis.Functor.Named
    Analysis.ImportGraph
    Analysis.Intro
    Analysis.Name
    Analysis.Project
    Analysis.Typecheck
    Control.Carrier.Fail.WithLoc
  build-depends:
    , aeson                       ^>= 1.4
    , algebraic-graphs            ^>= 0.3
    , base                         >= 4.13 && < 5
    , containers                  ^>= 0.6
    , filepath
    , fused-effects               ^>= 1.0
    , fused-effects-readline
    , fused-syntax
    , hashable
    , haskeline                   ^>= 0.7.5
    , hashable
    , lingo                       ^>= 0.3
    , pathtype                    ^>= 0.8.1
    , prettyprinter                >= 1.2 && < 2
    , prettyprinter-ansi-terminal ^>= 1.1.1
    , semantic-source             ^>= 0.0.2
    , semilattices
    , terminal-size               ^>= 0.3
    , text                        ^>= 1.2.3.1
    , transformers                ^>= 0.5
