cabal-version:       2.4
name:                semantic-cli
version:             0.0.0.0
synopsis:            CLI interface to the Semantic library.
description:         CLI interface to the Semantic library.
homepage:            https://github.com/github/semantic
bug-reports:         https://github.com/github/semantic/issues
license:             MIT
license-file:        LICENSE
author:              The Semantic authors
maintainer:          opensource+semantic@github.com
copyright:           2020 The Semantic authors
category:            Utility
build-type:          Simple
extra-doc-files:     README.md
                   , CHANGELOG.md
tested-with:         GHC == 8.8.1

source-repository head
  type:                git
  location:            https://github.com/github/semantic/semantic-cli

common haskell
  default-language:    Haskell2010
  default-extensions:  StrictData
  ghc-options:
    -Weverything
    -Wno-missing-local-signatures
    -Wno-missing-import-lists
    -Wno-implicit-prelude
    -Wno-safe
    -Wno-unsafe
    -Wno-name-shadowing
    -Wno-monomorphism-restriction
    -Wno-missed-specialisations
    -Wno-all-missed-specialisations
    -Wno-star-is-type
  if (impl(ghc >= 8.8))
    ghc-options: -Wno-missing-deriving-strategies

executable semantic
  import:              haskell
  hs-source-dirs:      app
  main-is:             Main.hs

  build-depends:       base ^>= 4.13.0.0
                     , semantic
                     , semantic-analysis
                     , fused-effects ^>= 1
                     , pathtype ^>= 0.8.1
                     , optparse-applicative >= 0.14.3 && < 0.16
                     , unix ^>= 2.7

  ghc-options:         -Wall
                       -threaded
                       -rtsopts
                       -with-rtsopts=-N
                       -Wincomplete-uni-patterns
                       -Wincomplete-record-updates
                       -Wcompat
                       -Widentities
                       -Wredundant-constraints
                       -fhide-source-paths
                       -Wmissing-export-lists
                       -Wpartial-fields
                       -Wmissing-deriving-strategies

  default-language:    Haskell2010
