package(default_visibility = ["//visibility:public"])

load(
    "@rules_haskell//haskell:defs.bzl",
    "haskell_library",
    "haskell_test",
)
load(
    "@rules_haskell//haskell:cabal.bzl",
    "haskell_cabal_binary",
    "haskell_cabal_library",
)
load(
    "//:build/common.bzl",
    "EXECUTABLE_FLAGS",
    "GHC_FLAGS",
)

haskell_library(
    name = "semantic-core",
    srcs = glob(["src/**/*.hs"]),
    compiler_flags = GHC_FLAGS,
    deps = [
        "//:base",
        "//:text",
        "//semantic-analysis",
        "@stackage//:fused-effects",
        "@stackage//:hashable",
    ],
)
