cabal-version:       2.4

name:                semantic-core
version:             0.0.0.0
synopsis:            Semantic core intermediate language
description:         Core intermediate language for program analysis using abstract definitional interpretation.
homepage:            https://github.com/github/semantic/tree/master/semantic-core#readme
bug-reports:         https://github.com/github/semantic/issues
license:             MIT
license-file:        LICENSE
author:              The Semantic authors
maintainer:          opensource+semantic@github.com
copyright:           (c) 2019 GitHub, Inc.
category:            Language
build-type:          Simple
stability:           alpha
extra-source-files:  README.md

tested-with:         GHC == 8.6.4

library
  exposed-modules:     Analysis.Concrete
                     , Analysis.Eval
                     , Analysis.FlowInsensitive
                     , Analysis.ImportGraph
                     , Analysis.ScopeGraph
                     , Analysis.Typecheck
                     , Control.Effect.Readline
                     , Data.Core
                     , Data.Core.Parser
                     , Data.Core.Pretty
                     , Data.File
                     , Data.Loc
                     , Data.Name
                     , Data.Stack
                     , Language.Preface
  -- other-modules:
  -- other-extensions:
  build-depends:       algebraic-graphs            ^>= 0.3
                     , base                         >= 4.12 && < 5
                     , containers                  ^>= 0.6
                     , directory                   ^>= 1.3
                     , filepath                    ^>= 1.4
                     , fused-effects               ^>= 0.4
                     , haskeline                   ^>= 0.7.5
                     , parsers                     ^>= 0.12.10
                     , prettyprinter               ^>= 1.2.1
                     , prettyprinter-ansi-terminal ^>= 1.1.1
                     , recursion-schemes           ^>= 5.1
                     , semigroupoids               ^>= 5.3
                     , text                        ^>= 1.2.3.1
                     , transformers                ^>= 0.5.6
                     , trifecta                    ^>= 2
                     , unordered-containers        ^>= 0.2.10
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:
    -Weverything
    -Wno-missing-local-signatures
    -Wno-missing-import-lists
    -Wno-implicit-prelude
    -Wno-safe
    -Wno-unsafe
    -Wno-name-shadowing
    -Wno-monomorphism-restriction
    -Wno-missed-specialisations
    -Wno-all-missed-specialisations
    -Wno-star-is-type

test-suite doctest
  type:                exitcode-stdio-1.0
  main-is:             Doctest.hs
  build-depends:       base >=4.9 && <4.13
                     , doctest >=0.7 && <1.0
                     , QuickCheck
                     , semantic-core
  hs-source-dirs:      test
  default-language:    Haskell2010

test-suite spec
  type:                exitcode-stdio-1.0
  main-is:             Spec.hs
  other-modules:       Generators
  build-depends:       base
                     , semantic-core
                     , hedgehog ^>= 1
                     , tasty >= 1.2 && <2
                     , tasty-hedgehog ^>= 1.0.0.1
                     , tasty-hunit >= 0.10 && <1
                     , trifecta
  hs-source-dirs:      test
  default-language:    Haskell2010
